--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>less-10</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="icon" href="images/images.png">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
@@ -25,7 +26,7 @@
                             <a class="restaurant" href="#">RESTAURANT</a>
                         </li>
                         <li>
-                            <a  href="#">ABOUT AS</a>
+                            <a  href="#">ABOUT US</a>
                         </li>
                         <li>
                             <a class="blog" href="#">BLOG</a>
@@ -37,11 +38,11 @@
                 </nav>
 
             </div>
-            <div class="aboutas">
-                <h2 class="h2">About As</h2>
+            <div class="aboutus">
+                <h2 class="h2">About Us</h2>
                 <div class="div-about">
                   <p class="p-home">Home</p>
-                  <p >About As</p>  
+                  <p >About Us</p>  
                 
                 </div>
 
@@ -50,6 +51,39 @@
         </div>
 
     </header>
+    <section>
+        <div class="conteiner">
+            <div class="left-block">
+                <h2>ABOUT US</h2>
+                <P class="text">Trust and quality
+                are our atuus </P>
+                <p class="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p class="lorem2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <div class="blu-box">
+                    <p> read more</p>
+                    <i class="fa-solid fa-arrow-right arrow"></i>
+
+                </div>
+            </div>
+
+            <div class="right-block">
+                <div class="top-image">
+                    <div>
+                        <img src="images/1.jpg" alt="image">
+                    </div>
+                    <div>
+                        <img src="images/2.jpg" alt="image">
+                    </div>
+                </div>
+                <div>
+                    <img src="images/3.jpg" alt="image">
+                </div>
+
+            </div>
+        </div>
+
+    </section>
+
     
 </body>
 </html>
