--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     </header>
     <section>
-        <div class="conteiner">
+        <div class="container">
             <div class="left-block">
                 <h2>ABOUT US</h2>
                 <P class="text">Trust and quality
@@ -82,6 +82,58 @@
             </div>
         </div>
 
+    </section>
+    <section>
+        <div class="container2">
+            <div class="bg-image-section" >
+                <div class="text-section2" >
+                    <h2>ABOUT US</h2>
+                    <P> We bring you the finest details</P>  
+
+                </div>
+                 <div class="wraper">
+                    <div class="block">
+                        <div class="blu-div">
+                            <div> <img src="images/hotel.png" alt="image"></div>
+                        </div>
+                        <h2> Free Wifi to stay connected</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut </p>
+
+                    </div>
+                    <div class="block">
+                        <div class="blu-div">
+                            <div> <img src="images/hotel.png" alt="image"></div>
+                        </div>
+                        <h2> Free Wifi to stay connected</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut </p>
+
+                    </div>
+                    <div class="block">
+                        <div class="blu-div">
+                            <div> <img src="images/hotel.png" alt="image"></div>
+                        </div>
+                        <h2> Free Wifi to stay connected</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut </p>
+
+                    </div>
+                    <div class="block">
+                        <div class="blu-div">
+                            <div> <img src="images/hotel.png" alt="image"></div>
+                        </div>
+                        <h2> Free Wifi to stay connected</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut </p>
+                    </div>
+
+                </div>
+            </div>
+            <div class="left-block-2">
+
+            </div>
+            <div class="right-block-2">
+
+            </div>
+
+        </div>
     </section>
 
     
