--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="images/images.png">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/font.css">
 </head>
 <body>
     <header>
@@ -96,7 +97,8 @@
                         <div class="blu-div">
                             <div> <img src="images/hotel.png" alt="image"></div>
                         </div>
-                        <h2> Free Wifi to stay connected</h2>
+                        <h2> Free Wifi
+                            to stay connected</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut </p>
 
                     </div>
@@ -104,7 +106,8 @@
                         <div class="blu-div">
                             <div> <img src="images/hotel.png" alt="image"></div>
                         </div>
-                        <h2> Free Wifi to stay connected</h2>
+                        <h2> 4K Television and
+                            Netflix included</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut </p>
 
                     </div>
@@ -112,7 +115,8 @@
                         <div class="blu-div">
                             <div> <img src="images/hotel.png" alt="image"></div>
                         </div>
-                        <h2> Free Wifi to stay connected</h2>
+                        <h2> Span zone where
+                            you can chill</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut </p>
 
                     </div>
@@ -120,7 +124,8 @@
                         <div class="blu-div">
                             <div> <img src="images/hotel.png" alt="image"></div>
                         </div>
-                        <h2> Free Wifi to stay connected</h2>
+                        <h2> Spacious rooms
+                            for awesome parties</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut </p>
                     </div>
 
