section2-bottom part

--- a/index.html
+++ b/index.html
@@ -131,13 +131,24 @@
 
                 </div>
             </div>
-            <div class="left-block-2">
+            <div class="container3">
+                <div class="left-block-2">
+                    <h2 class="block2-h2">Testimonials</h2>
+                    <p class="trust">We trust our customers
+                        and they trust us too</p>
+                     <div class="left-block2-flex">
+                        <img src="images/marius.png" alt="marius">
+                         <span>Marius Ciocirlan</span>
+                    </div>
+                    <p class="review">I'm very glad I had the opportunity to visit this hotel. The stuff is very friendly and I will definetly visit the hotel again next year.</p>
 
+
+                </div>
+                <div class="right-block-2">
+                    <img src="images/room2.jpg" alt="image">
+
+                </div>
             </div>
-            <div class="right-block-2">
-
-            </div>
-
         </div>
     </section>
 
