--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>less-10</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="icon" href="images/images.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/font.css">
@@ -15,7 +15,7 @@
         <div class="bg-image-header">
             <div class="navigation-flex">
                 <a class="zetta" href="#">Zetta Hotels</a>
-                <nav>
+                <nav class="navigation">
                     <ul class="nav-ul">
                         <li>
                             <a class="home" href="#">HOME</a>
@@ -37,6 +37,9 @@
                         </li>
                     </ul>
                 </nav>
+                <div class="burger-bar">
+                    <i class="fa-solid fa-bars"></i>
+                </div>
 
             </div>
             <div class="aboutus">
@@ -151,6 +154,26 @@
             </div>
         </div>
     </section>
+    <section>
+        <div class="section3">
+        <h2>Photos</h2>
+        <p>See our latest photos
+            from restaurant and hotel</p>
+        </div>
+        <div class="container4">
+            <div>
+                <img src="images/photo1.jpg" alt="image">
+            </div>
+            <div>
+                <img src="images/photo2.jpg" alt="image">
+            </div>
+            <div>
+                <img src="images/photo3.jpg" alt="image">
+            </div>
+
+        </div>
+    </section>
+
 
     
 </body>
