--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
             </div>
      
     </section>
+
     <footer class="footer-bg">
         <div class="section3 footer-flex">
             <div class="footer-block1">
@@ -210,7 +211,7 @@
 
             </div>
 
-            <div class="footer-block3">
+            <div class="footer-block2">
                 <h2>Privacy</h2>
                 <ul>
                     <li>Career</li>
@@ -220,17 +221,38 @@
                 </ul>
 
             </div>
-            <div class="footer-block4">
+            <div class="footer-block2">
                 <h2>Contact Info</h2>
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>
+                        <i class="fa-solid fa-envelope"></i>
+                        <a href="mailto:name@rapidtables.com?subject=The%20subject%20of%20the%20mail">example@yahoo.com</a>
+
+                    </li>
+                    <li>
+                        <i class="fa-solid fa-phone"></i>
+                        <a href="tel:+0 320 422 4254">+0 320 422 4254</a>
+                    </li>
+                    <li>
+                        <i class="fa-solid fa-location-dot"></i>
+                        <a href="https://www.google.ge/maps/place/Downtown+Chicago,+IL,+USA/@41.879194,-87.6564163,13z/data=!3m1!4b1!4m5!3m4!1s0x880e2caf74846717:0xbc3dc7eb0e09bbfd!8m2!3d41.8756719!4d-87.6243469">Main Str Chicago Ilinois</a>
+
+                    </li>
                     
                 </ul>
 
             </div>
 
+        </div>
+        <div class="copy">
+            <div class="copyright">
+                <span>Copyright </span>
+                <i class="fa-regular fa-copyright"></i>
+                <span>2020 ALL rights reserved</span>
+                <span>This template is made with love by</span>
+                <span>Marian</span>
+
+            </div>
         </div>
     </footer>
 
