--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
                     <h2 class="h2">About Us</h2>
                     <div class="div-about">
                     <p class="p-home">Home</p>
-                    <p >About Us</p>  
+                    <p >About Us</p> 
+                    </div> 
                 
                 </div>
 
@@ -247,10 +248,10 @@
         <div class="copy">
             <div class="copyright">
                 <span>Copyright </span>
-                <i class="fa-regular fa-copyright"></i>
-                <span>2020 ALL rights reserved</span>
+                <i class="fa-regular fa-copyright icon"></i>
+                <span class="span">2020 ALL rights reserved</span>
                 <span>This template is made with love by</span>
-                <span>Marian</span>
+                <span class="span1">Marian</span>
 
             </div>
         </div>
