correction pone number

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                     </li>
                     <li>
                         <i class="fa-solid fa-phone"></i>
-                        <a href="tel:+0 320 422 4254">+0 320 422 4254</a>
+                        <a href="tel:+03204224254">+0 320 422 4254</a>
                     </li>
                     <li>
                         <i class="fa-solid fa-location-dot"></i>
