--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
             <div class="right-block">
                 <div class="top-image">
                     <div>
-                        <img src="images/1.jpg" alt="image">
+                        <img class="image1" src="images/1.jpg" alt="image">
                     </div>
                     <div>
-                        <img src="images/2.jpg" alt="image">
+                        <img class="image2" src="images/2.jpg" alt="image">
                     </div>
                 </div>
                 <div>
-                    <img src="images/3.jpg" alt="image">
+                    <img class="image3" src="images/3.jpg" alt="image">
                 </div>
 
             </div>
@@ -253,7 +253,8 @@
                 <i class="fa-regular fa-copyright icon"></i>
                 <span class="span">2020 ALL rights reserved</span>
                 <span>This template is made with love by</span>
-                <span class="span1">Marian</span>
+                <!-- <span class="span1">Marian</span> -->
+                <a class="span1" href="#">Marian</a>
 
             </div>
         </div>
