--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
                 </div>
                 <div class="right-block-2">
-                    <img src="images/room2.jpg" alt="image">
+                    <img class="room2" src="images/room2.jpg" alt="image">
 
                 </div>
             </div>
@@ -169,13 +169,13 @@
         
             <div class="container4">
                 <div>
-                     <img src="images/photo1.jpg" alt="image">
+                     <img class="photo1" src="images/photo1.jpg" alt="image">
                 </div>
                 <div>
-                    <img src="images/photo2.jpg" alt="image">
+                    <img class="photo2" src="images/photo2.jpg" alt="image">
                 </div>
                 <div>
-                    <img src="images/photo3.jpg" alt="image">
+                    <img class="photo3" src="images/photo3.jpg" alt="image">
                 </div>
             </div>
      
